--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<!--    <script src="../dist/index.js"></script>-->
+<!--    <script src="./dist/index._rollup.js"></script>-->
     <script src="./dist/index._webpack.js"></script>
 </head>
 <body>
