增加 typescript 支持

--- a/packages/rollup-plugin-olaf-mix/test/index.html
+++ b/packages/rollup-plugin-olaf-mix/test/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="./index._rollup.js"></script>
+    <script src="./index.output.js"></script>
+    <script src="./index.typescript.output.js"></script>
 </head>
 <body>
 <div>just a test</div>
