webpack loader 生产验证完成

--- a/packages/olaf-mix-loader/test/index.html
+++ b/packages/olaf-mix-loader/test/index.html
@@ -8,8 +8,8 @@
 <body>
 <div>just a test</div>
 <script>
-    var Bar = olaf_mix.Bar;
-    Bar.mix();
+    var Bar = main.Bar;
+    Bar.sayGod();
 </script>
 </body>
 </html>
