--- a/example/index.html
+++ b/example/index.html
@@ -9,8 +9,21 @@
 <div>just a test</div>
 <script>
     var Bar = main.Bar;
-    var result = Bar.makeNumber(10, 5);
-    console.log(result);
+
+    const AsyncFunction = Object.getPrototypeOf(async function() {
+    }).constructor;
+    const b = new AsyncFunction('name', `
+   console.log(name);
+   return name;
+`);
+
+    const c = b('just a test');
+    console.log(c);
+    c.then(data => {
+        console.log(data);
+    });
+    // var result = Bar.makeNumber(10, 5);
+    // console.log(result);
 </script>
 </body>
 </html>
