混乱 helperInject 变量

--- a/packages/rollup-plugin-olaf-mix/test/index.html
+++ b/packages/rollup-plugin-olaf-mix/test/index.html
@@ -9,8 +9,10 @@
 <body>
 <div>just a test</div>
 <script>
-    var Bar = main.Bar;
-    Bar.mix();
+    // var Bar = main.Bar;
+    var Bar = maints.Bar;
+    var params = {name: '张三', message: 'say hi~', page: 8, size: 11};
+    Bar.messy(params);
 </script>
 </body>
 </html>
